--- a/package.json
+++ b/package.json
@@ -6,6 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mantine/core": "^4.0.7",
+    "@mantine/dates": "^4.0.7",
+    "@mantine/dropzone": "^4.0.7",
+    "@mantine/form": "^4.0.7",
+    "@mantine/hooks": "^4.0.7",
+    "@mantine/modals": "^4.0.7",
+    "@mantine/next": "^4.0.7",
+    "@mantine/notifications": "^4.0.7",
+    "@mantine/prism": "^4.0.7",
+    "@mantine/rte": "^4.0.7",
+    "@mantine/spotlight": "^4.0.7",
+    "dayjs": "^1.11.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
