--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/rte": "^4.0.7",
     "@mantine/spotlight": "^4.0.7",
     "dayjs": "^1.11.0",
+    "microcms-js-sdk": "^2.0.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
