--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "tabler-icons-react": "^1.42.0",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
