--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tabler-icons-react": "^1.42.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
+    "@types/react": "^18.0.5",
     "autoprefixer": "^10.2.6",
     "eslint": "^8.11.0",
     "eslint-config-next": "^12.1.0",
