--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tabler-icons-react": "^1.42.0",
-    "typescript": "^4.5.4",
+    "typescript": "^4.6.3",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
-    "@types/react": "^18.0.1",
+    "@types/react": "18.0.1",
     "autoprefixer": "^10.2.6",
     "eslint": "^8.11.0",
     "eslint-config-next": "^12.1.0",
