--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "yarn": "^1.22.18"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.25",
     "@types/react": "18.0.1",
     "autoprefixer": "^10.2.6",
