--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/spotlight": "^4.0.7",
     "dayjs": "^1.11.0",
     "microcms-js-sdk": "^2.0.0",
+    "microcms-richedit-processer": "^1.0.5",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
