--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "dayjs": "^1.11.0",
     "microcms-js-sdk": "^2.0.0",
     "microcms-richedit-processer": "^1.0.5",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^12.1.5",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "recoil": "^0.7.2",
     "tabler-icons-react": "^1.42.0",
     "typescript": "^4.6.3",
     "yarn": "^1.22.18"
