--- a/tsconfig.json
+++ b/tsconfig.json
@@ -95,7 +95,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "module": "esnext"
+    "module": "esnext",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
