--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^12.1.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-share": "^4.4.0",
     "recoil": "^0.7.2",
     "tabler-icons-react": "^1.42.0",
     "typescript": "^4.6.3",
